Fixed generate_xml() documentation

--- a/documentation.html
+++ b/documentation.html
@@ -67,8 +67,9 @@ $this->maani_xml_swf_charts->chart_label(array(
 $xml_string = $this->maani_xml_swf_charts->generate_xml();
 			</pre><br /><br />
 			<h3>General Methods</h3>
-			<span class="doc-funcname">generate_xml ()</span><br />
-			<p class="doc-descrip"><strong>returns</strong>: a string of the generated XML</p>
+			<span class="doc-funcname">generate_xml ([<span class="doc-funcname-type">bool</span> $format_xml])</span><br />
+			<p class="doc-descrip"><span class="doc-attr">$format_xml: </span>if specified as <span class="doc-inlinecode">true</span>, the XML will be formatted in a readable manner. Default is <span class="doc-inlinecode">false</span><br />
+			<strong>returns</strong>: a string of the generated XML</p>
 
 			<span class="doc-funcname">clear ()</span><br />
 			<p class="doc-descrip">clears out all the nodes added using the XML related methods</p>
