spelling correction: from Github to GitHub

--- a/download.html
+++ b/download.html
@@ -51,8 +51,8 @@
 			<h4>Download</h4>
 	
 			<ul>
-                <li>Tar: <a href="http://github.com/doronhorwitz/XML-SWF-Charts-for-CI/tarball/master">download from Github</a></li>
-                <li>Zip: <a href="http://github.com/doronhorwitz/XML-SWF-Charts-for-CI/zipball/master">download from Github</a></li>
+                <li>Tar: <a href="http://github.com/doronhorwitz/XML-SWF-Charts-for-CI/tarball/master">download from GitHub</a></li>
+                <li>Zip: <a href="http://github.com/doronhorwitz/XML-SWF-Charts-for-CI/zipball/master">download from GitHub</a></li>
             </ul>
 			<br /><br />
 		</div>
