added link to GitHub project page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
 			<h2>XML/SWF Charts for CodeIgniter</h2>
 			<h4>About</h4>
 	
-			<p><strong>XML/SWF Charts for CI</strong> is an open-source <a href="http://www.codeigniter.com">CodeIgniter</a> library for simplifying the task of generating the XML used by the <a href="http://maani.us/xml_charts/">XML/SWF Charts tool</a>. This library contains methods corresponding to each of the base XML nodes which are listed in the <a href="http://maani.us/xml_charts/index.php?menu=Reference">XML/SWF Charts reference</a>. By calling the relevant methods, an XML DOM document is built up. In this way, the library hides the complexity of manually building up a DOM document to generate this XML.</p>	
+			<p><strong>XML/SWF Charts for CI</strong> is an open-source <a href="http://www.codeigniter.com">CodeIgniter</a> library for simplifying the task of generating the XML used by the <a href="http://maani.us/xml_charts/">XML/SWF Charts tool</a>. This library contains methods corresponding to each of the base XML nodes which are listed in the <a href="http://maani.us/xml_charts/index.php?menu=Reference">XML/SWF Charts reference</a>. By calling the relevant methods, an XML DOM document is built up. In this way, the library hides the complexity of manually building up a DOM document to generate this XML.</p>
+			<p>Project page on GitHub: <a href="http://github.com/doronhorwitz/XML-SWF-Charts-for-CI">http://github.com/doronhorwitz/XML-SWF-Charts-for-CI</a></p>
+			
 			<br /><br />
 		</div>
 	</div>
